<resources>
    <string name="app_name">homework_3</string>
    <string name="title">Profile Info</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="age">Age</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="enter_all_input">* Enter All Input</string>
    <string name="email_validator_text">Enter Correct Email</string>
    <string name="age_validator_text">Enter Correct Age</string>
    <string name="enter_more_then_10_character">Enter more then 10 character</string>
    <string name="again">Again</string>
</resources>